feat: :construction: Akatsuki mes
Primer itachi en akatsuki mes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="prueba.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/main.js"></script>
 </head>
 <body>
-    <button onclick="alerta()">MOSTRAR </button>
+    <header class="titulo"><h1>Que Akatsuki eres segun tu mes de nacimiento</h1></header>
+    <main>
+        <section>
+            <article>
+                <div class="enero">
+                    <h2>Enero</h2>
+                    <p>Es el primer mes de nacimiento de Akatsuki</p>
+                    <button id="itachi">Click me</button>
+                </div>
+                <div class="febrero">
+                    <h2>Febrero</h2>
+                    <p>Es el segundo mes de nacimiento de Akatsuki</p>
+                    <button #Deidara>Click me</button>
+                </div>
+                <div class="marzo">
+                    <h2>Marzo</h2>
+                    <p>Es el tercer mes de nacimiento de Akatsuki</p>
+                    <button #Sasori>Click me</button>
+                </div>
+                <div class="abril">
+                    <h2>Abril</h2>
+                    <p>Es el cuarto mes de nacimiento de Akatsuki</p>
+                    <button #Orochimaru>Click me</button>
+                </div>
+                <div class="mayo">
+                    <h2>Mayo</h2>
+                    <p>Es el quinto mes de nacimiento de Akatsuki</p>
+                    <button #Konan>Click me</button>
+                </div>
+                <div class="junio">
+                    <h2>Junio</h2>
+                    <p>Es el sexto mes de nacimiento de Akatsuki</p>
+                    <button #Kisame>Click me</button>
+                </div>
+                <div class="julio">
+                    <h2>Julio</h2>
+                    <p>Es el septimo mes de nacimiento de Akatsuki</p>
+                    <button #Pain>Click me</button>
+                </div>
+                <div class="agosto">
+                    <h2>Agosto</h2>
+                    <p>Es el octavo mes de nacimiento de Akatsuki</p>
+                    <button #Obito>Click me</button>
+                </div>
+                <div class="septiembre">
+                    <h2>Septiembre</h2>
+                    <p>Es el noveno mes de nacimiento de Akatsuki</p>
+                    <button #Kakuzu>Click me</button>
+                </div>
+                <div class="octubre">
+                    <h2>Octubre</h2>
+                    <p>Es el decimo mes de nacimiento de Akatsuki</p>
+                    <button #Hidan>Click me</button>
+                </div>
+                <div class="noviembre">
+                    <h2>Noviembre</h2>
+                    <p>Es el undecimo mes de nacimiento de Akatsuki</p>
+                    <button Deidara>Click me</button>
+                </div>
+                <div class="diciembre">
+                    <h2>Diciembre</h2>
+                    <p>Es el duodecimo mes de nacimiento de Akatsuki</p>
+                    <button #Zetsu>Click me</button>
+                </div> 
+                <div class="itachi" id="imagen">
+                    <button class="x" id="close">X</button>
+                    <h2>Itachi</h2>
+                    <img src="storage/img/itachi.png" alt="">
+                    <p>Eres Itachi</p>
+                </div>            
+            </article>
+        </section>
+    </main>
 </body>
 </html>
