--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="storage/img/logo.png" type="image/png">
+    <title>¿Que Akatsuki eres?</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="js/main.js"></script>
 </head>
@@ -20,66 +21,132 @@
                 <div class="febrero">
                     <h2>Febrero</h2>
                     <p>Es el segundo mes de nacimiento de Akatsuki</p>
-                    <button #Deidara>Click me</button>
+                    <button id="deidara">Click me</button>
                 </div>
                 <div class="marzo">
                     <h2>Marzo</h2>
                     <p>Es el tercer mes de nacimiento de Akatsuki</p>
-                    <button #Sasori>Click me</button>
+                    <button id = "sasori">Click me</button>
                 </div>
                 <div class="abril">
                     <h2>Abril</h2>
                     <p>Es el cuarto mes de nacimiento de Akatsuki</p>
-                    <button #Orochimaru>Click me</button>
+                    <button id = "orochimaru">Click me</button>
                 </div>
                 <div class="mayo">
                     <h2>Mayo</h2>
                     <p>Es el quinto mes de nacimiento de Akatsuki</p>
-                    <button #Konan>Click me</button>
+                    <button id = "konan">Click me</button>
                 </div>
                 <div class="junio">
                     <h2>Junio</h2>
                     <p>Es el sexto mes de nacimiento de Akatsuki</p>
-                    <button #Kisame>Click me</button>
+                    <button id = "kisame">Click me</button>
                 </div>
                 <div class="julio">
                     <h2>Julio</h2>
                     <p>Es el septimo mes de nacimiento de Akatsuki</p>
-                    <button #Pain>Click me</button>
+                    <button id = "pain">Click me</button>
                 </div>
                 <div class="agosto">
                     <h2>Agosto</h2>
                     <p>Es el octavo mes de nacimiento de Akatsuki</p>
-                    <button #Obito>Click me</button>
+                    <button id = "obito">Click me</button>
                 </div>
                 <div class="septiembre">
                     <h2>Septiembre</h2>
                     <p>Es el noveno mes de nacimiento de Akatsuki</p>
-                    <button #Kakuzu>Click me</button>
+                    <button id = "kakuzu">Click me</button>
                 </div>
                 <div class="octubre">
                     <h2>Octubre</h2>
                     <p>Es el decimo mes de nacimiento de Akatsuki</p>
-                    <button #Hidan>Click me</button>
+                    <button id="hidan">Click me</button>
                 </div>
                 <div class="noviembre">
                     <h2>Noviembre</h2>
                     <p>Es el undecimo mes de nacimiento de Akatsuki</p>
-                    <button Deidara>Click me</button>
+                    <button id = "zetsu">Click me</button>
                 </div>
                 <div class="diciembre">
                     <h2>Diciembre</h2>
                     <p>Es el duodecimo mes de nacimiento de Akatsuki</p>
-                    <button #Zetsu>Click me</button>
-                </div> 
-                <div class="itachi" id="imagen">
-                    <button class="x" id="close">X</button>
-                    <h2>Itachi</h2>
-                    <img src="storage/img/itachi.png" alt="">
-                    <p>Eres Itachi</p>
-                </div>            
+                    <button id = "sasuke">Click me</button>
+                </div>             
             </article>
         </section>
+        <div class="itachi" id="imagen">
+            <button class="x" id="close">X</button>
+            <h2>Itachi</h2>
+            <img src="storage/img/itachi.png" alt="">
+            <p>Eres Itachi</p>
+        </div>
+        <div class="itachi" id="imagen2">
+            <button class="x" id="close2">X</button>
+            <h2>Deidara</h2>
+            <img src="storage/img/Deidara.png" alt="">
+            <p>Eres Deidara</p>
+        </div>
+        <div class="itachi" id="imagen3">
+            <button class="x" id="close3">X</button>
+            <h2>Sasori</h2>
+            <img src="storage/img/Sasori.png" alt="">
+            <p>Eres Sasori</p>
+        </div>
+        <div class="itachi" id="imagen4">
+            <button class="x" id="close4">X</button>
+            <h2>Orochimaru</h2>
+            <img src="storage/img/Orochimaru.png" alt="">
+            <p>Eres Orochimaru</p>
+        </div>
+        <div class="itachi" id="imagen5">
+            <button class="x" id="close5">X</button>
+            <h2>Konan</h2>
+            <img src="storage/img/Konan.png" alt="">
+            <p>Eres Konan</p>
+        </div>
+        <div class="itachi" id="imagen6">
+            <button class="x" id="close6">X</button>
+            <h2>Kisame</h2>
+            <img src="storage/img/Kisame.png" alt="">
+            <p>Eres Kisame</p>
+        </div>
+        <div class="itachi" id="imagen7">
+            <button class="x" id="close7">X</button>
+            <h2>Pain</h2>
+            <img src="storage/img/Pain.png" alt="">
+            <p>Eres Pain</p>
+        </div>
+        <div class="itachi" id="imagen8">
+            <button class="x" id="close8">X</button>
+            <h2>Obito</h2>
+            <img src="storage/img/Obito.png" alt="">
+            <p>Eres Obito</p>
+        </div>
+        <div class="itachi" id="imagen9">
+            <button class="x" id="close9">X</button>
+            <h2>Kakuzu</h2>
+            <img src="storage/img/Kakuzu.png" alt="">
+            <p>Eres Kakuzu</p>
+        </div>
+        <div class="itachi" id="imagen10">
+            <button class="x" id="close10">X</button>
+            <h2>Hidan</h2>
+            <img src="storage/img/Hidan.png" alt="">
+            <p>Eres Hidan</p>
+        </div>
+        <div class="itachi" id="imagen11">
+            <button class="x" id="close11">X</button>
+            <h2>Zetsu</h2>
+            <img src="storage/img/Zetsu.png" alt="">
+            <p>Eres Zetsu</p>
+        </div>
+        <div class="itachi" id="imagen12">
+            <button class="x" id="close12">X</button>
+            <h2>Sasuke</h2>
+            <img src="storage/img/Sasuke.png" alt="">
+            <p>Eres Sasuke</p>
+        </div>
     </main>
 </body>
 </html>
