feat: :rocket: Final pagina goku

--- a/index.html
+++ b/index.html
@@ -3,10 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script type="module" src="prueba.js"></script>
+    <link rel="shortcut icon" href="storage/img/logo.png" type="image/png">
+    <title>¿Que guerrero Z eres?</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/main.js"></script>
 </head>
 <body>
-    <button onclick="alerta()">MOSTRAR </button>
+    <header class="titulo"><h1>Que guerrero Z eres segun tu mes de nacimiento</h1></header>
+    <main>
+        <section>
+            <article>
+                <audio src="storage/img/y2mate.com - Dragon ball Z soundtrack 1.mp3" autoplay></audio>
+                <div class="enero">
+                    <h2>Enero</h2>
+                    <button id="itachi">Click me</button>
+                </div>
+                <div class="febrero">
+                    <h2>Febrero</h2>
+
+                    <button id="deidara">Click me</button>
+                </div>
+                <div class="marzo">
+                    <h2>Marzo</h2>
+                    <button id = "sasori">Click me</button>
+                </div>
+                <div class="abril">
+                    <h2>Abril</h2>
+                    <button id = "orochimaru">Click me</button>
+                </div>
+                <div class="mayo">
+                    <h2>Mayo</h2>
+                    <button id = "konan">Click me</button>
+                </div>
+                <div class="junio">
+                    <h2>Junio</h2>
+                    <button id = "kisame">Click me</button>
+                </div>
+                <div class="julio">
+                    <h2>Julio</h2>
+
+                    <button id = "pain">Click me</button>
+                </div>
+                <div class="agosto">
+                    <h2>Agosto</h2>
+                    <button id = "obito">Click me</button>
+                </div>
+                <div class="septiembre">
+                    <h2>Septiembre</h2>
+                    <button id = "kakuzu">Click me</button>
+                </div>
+                <div class="octubre">
+                    <h2>Octubre</h2>
+                    <button id="hidan">Click me</button>
+                </div>
+                <div class="noviembre">
+                    <h2>Noviembre</h2>
+    
+                    <button id = "zetsu">Click me</button>
+                </div>
+                <div class="diciembre">
+                    <h2>Diciembre</h2>
+        
+                    <button id = "sasuke">Click me</button>
+                </div>             
+            </article>
+        </section>
+        <div class="itachi" id="imagen">
+            <button class="x" id="close">X</button>
+            <h2>Krilin</h2>
+            <img src="storage/img/krilin.png" alt="">
+            <p>Eres Krilin</p>
+        </div>
+        <div class="itachi" id="imagen2">
+            <button class="x" id="close2">X</button>
+            <h2>Piccolo</h2>
+            <img src="storage/img/picolo.png" alt="">
+            <p>Eres Piccolo</p>
+        </div>
+        <div class="itachi" id="imagen3">
+            <button class="x" id="close3">X</button>
+            <h2>Goku</h2>
+            <img src="storage/img/goku.png" alt="">
+            <p>Eres Goku</p>
+        </div>
+        <div class="itachi" id="imagen4">
+            <button class="x" id="close4">X</button>
+            <h2>Vegeta</h2>
+            <img src="storage/img/vegeta.png" alt="">
+            <p>Eres Vegeta</p>
+        </div>
+        <div class="itachi" id="imagen5">
+            <button class="x" id="close5">X</button>
+            <h2>Trunks</h2>
+            <img src="storage/img/trunks.png" alt="">
+            <p>Eres Trunks</p>
+        </div>
+        <div class="itachi" id="imagen6">
+            <button class="x" id="close6">X</button>
+            <h2>Gohan</h2>
+            <img src="storage/img/gohan.png" alt="">
+            <p>Eres Gohan</p>
+        </div>
+        <div class="itachi" id="imagen7">
+            <button class="x" id="close7">X</button>
+            <h2>Ten Shin Han</h2>
+            <img src="storage/img/tenchinhan.png" alt="">
+            <p>Eres Ten Shin Han</p>
+        </div>
+        <div class="itachi" id="imagen8">
+            <button class="x" id="close8">X</button>
+            <h2>Yamcha</h2>
+            <img src="storage/img/yamcha.png" alt="">
+            <p>Eres Yamcha</p>
+        </div>
+        <div class="itachi" id="imagen9">
+            <button class="x" id="close9">X</button>
+            <h2>Maestro Roshi</h2>
+            <img src="storage/img/roshi.png" alt="">
+            <p>Eres Maestro Roshi</p>
+        </div>
+        <div class="itachi" id="imagen10">
+            <button class="x" id="close10">X</button>
+            <h2>Chaozu</h2>
+            <img src="storage/img/chaos.png" alt="">
+            <p>Eres Chaozu</p>
+        </div>
+        <div class="itachi" id="imagen11">
+            <button class="x" id="close11">X</button>
+            <h2>Bulma</h2>
+            <img src="storage/img/bulma.png" alt="">
+            <p>Eres Bulma</p>
+        </div>
+        <div class="itachi" id="imagen12">
+            <button class="x" id="close12">X</button>
+            <h2>Goten</h2>
+            <img src="storage/img/goten.png" alt="">
+            <p>Eres Goten</p>
+        </div>
+    </main>
 </body>
 </html>
